<resources>
    <string name="app_name">PracticaTema5</string>
    <string name="Inicio">Inicio</string>
    <string name="ConfToast">Configurar Toast</string>
    <string name="ConfNotif">Configurar Notificación</string>

    <string name="btn1">Apartado Nº1</string>
    <string name="btn2">Apartado Nº2</string>

    <string name="lblDesplazamiento">Desplazamiento del Toast</string>
    <string name="txtDespHoriz">Desplazamiento Horizontal</string>
    <string name="txtDespVerti">Desplazamiento Vertical</string>

    <string name="lblTextoToast">Mensaje del Toast</string>
    <string name="txtTextoToast">Texto del Toast</string>

    <string name="lblAliHoriz">Alineación Horizontal</string>
    <string name="lblAliVerti">Alineación Vertical</string>

    <string name="selcAli">Selecciona la alineación...</string>
    <string name="izq">Izquierda</string>
    <string name="med">Medio</string>
    <string name="der">Derecha</string>
    <string name="arr">Arriba</string>
    <string name="cen">Centro</string>
    <string name="aba">Abajo</string>


    <string-array name="spnAliHoriz">
        <item>@string/selcAli</item>
        <item>@string/izq</item>
        <item>@string/med</item>
        <item>@string/der</item>
    </string-array>

    <string-array name="spnAliVerti">
        <item>@string/selcAli</item>
        <item>@string/arr</item>
        <item>@string/cen</item>
        <item>@string/aba</item>
    </string-array>

    <string name="btnMostrar">Mostrar</string>

    <string name="lblError">Has dejado campos vacios o sin seleccionar</string>
    
    
    <string name="lblTitulo">Título del mensaje</string>
    <string name="txtTitulo">Introduce el titulo</string>

    <string name="lblMensaje">Mensaje a mostrar</string>
    <string name="txtMensaje">Introduce el mensaje</string>

    <string name="lblSeg">Numero de segundos que durará</string>
    <string name="txtSeg">Introduce los segundos</string>

    <string name="btnEnviar">Enviar</string>

</resources>
