<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurarToast">

    <TextView
        android:id="@+id/lblDesplazamiento"
        style="@style/estiloTextoN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDesplazamiento"
        app:layout_constraintBottom_toTopOf="@+id/txtDespVerti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <EditText
        android:id="@+id/txtDespVerti"
        style="@style/estiloTextoN"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtDespVerti"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/lblMensajeToast"
        style="@style/estiloTextoN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTextoToast"
        app:layout_constraintBottom_toTopOf="@+id/txtMensajeToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="160dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAliVerti"
        app:layout_constraintVertical_bias="0.062" />

    <Spinner
        android:id="@+id/spnHorizontal"
        android:layout_width="160dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAliHoriz"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/lblAliVerti"
        style="@style/estiloTextoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAliVerti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMensajeToast"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/lblAliHoriz"
        style="@style/estiloTextoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAliHoriz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMensajeToast"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/txtMensajeToast"
        style="@style/estiloTextoN"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTextoToast"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDespHoriz"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/txtDespHoriz"
        style="@style/estiloTextoN"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtDespHoriz"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDespVerti"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/btnMostrar"
        style="@style/estiloBoton"
        android:layout_width="222dp"
        android:layout_height="72dp"
        android:text="@string/btnMostrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMensajeToast"
        app:layout_constraintVertical_bias="0.508" />


</androidx.constraintlayout.widget.ConstraintLayout>